[package]
name = "rustmux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "0.3.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
anyhow = "1.0.72"
walkdir = "2.3.3"
dirs = "5.0.1"


